--- a/templates/weather_zipcode.html
+++ b/templates/weather_zipcode.html
@@ -401,7 +401,7 @@
           
               <button
                   type="button"
-                  class="mt-4 px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300"
+                  class="mt-4 px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 focus:outline-none focus:ring focus:border-green-300"
                   onclick="toggleScheduleText()"
               >
                   Schedule Task
