--- a/templates/index.html
+++ b/templates/index.html
@@ -511,7 +511,7 @@
                 <div class="lg p-6 bg-black rounded-md flex space-x-4 hidden"id="schedule_text">
                   <div class="w-1/2 mt-5">
                       <label for="recurrence_type" class="block text-sm font-medium text-white-700">Recurrence Type:</label>
-                      <select id="recurrence_type" name="recurrence_type" class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 bg-black">
+                      <select id="recurrence_type" name="recurrence_type" class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 bg-white text-black">
                           <option value="onetime">One time</option>
                           <option value="weekly">Weekly</option>
                           <option value="everyhour">Every Hour</option>
@@ -521,7 +521,7 @@
               
                   <div class="w-1/2">
                       <label for="schedule_time" class="block text-sm font-medium text-white-700 mt-4">Schedule Time:</label>
-                      <input type="datetime-local" id="schedule_time" name="schedule_time" class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 bg-black" />
+                      <input type="datetime-local" id="schedule_time" name="schedule_time" class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 bg-white text-black" />
                   </div>
               </div>
               
