--- a/templates/weather_zipcode.html
+++ b/templates/weather_zipcode.html
@@ -411,10 +411,10 @@
                   <!-- Your schedule task text goes here -->
                   <div class="flex flex-col space-y-4">
                     <label for="schedule_time" class="block text-sm font-medium text-white-700">Schedule Time:</label>
-                    <input type="datetime-local" id="schedule_time" name="schedule_time" class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 bg-black" />
+                    <input type="datetime-local" id="schedule_time" name="schedule_time" class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 bg-white text-black" />
                 
                     <label for="recurrence_type" class="block text-sm font-medium text-black-700">Recurrence Type:</label>
-                    <select id="recurrence_type" name="recurrence_type" class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 bg-black">
+                    <select id="recurrence_type" name="recurrence_type" class="mt-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring focus:border-blue-300 bg-white text-black">
                         <option value="onetime">One time</option>
                         <option value="weekly">Weekly</option>
                         <option value="everyhour">Every Hour</option>
