--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -37,7 +37,7 @@ Illustration from undraw.co by the amazing Katerina Limpitsouni
           aria-label="Global"
         >
           <div class="flex lg:flex-1">
-            <a href="news/" class="-m-1.5 p-1.5">
+            <a href="/Newscasters" class="-m-1.5 p-1.5">
               <span class="sr-only">Groundrushlabs</span>
               <img
                 class="h-8 w-auto bg-white"
