--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
           aria-label="Global"
         >
           <div class="flex lg:flex-1 dark-mode">
-            <a href="/" class="-m-1.5 p-1.5">
+            <a href="/Newscaster" class="-m-1.5 p-1.5">
               <span class="sr-only">Groundrushlabs</span>
               {% comment %} <img
                 class="h-8 w-auto bg-white"
