--- a/templates/edit_newscaster.html
+++ b/templates/edit_newscaster.html
@@ -43,7 +43,7 @@
           aria-label="Global"
         >
           <div class="flex lg:flex-1 dark-mode">
-            <a href="/" class="-m-1.5 p-1.5">
+            <a href="/Newscasters" class="-m-1.5 p-1.5">
               <span class="sr-only">Groundrushlabs</span>
               {% comment %} <img
                 class="h-8 w-auto bg-white"
