--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -1,4 +1,4 @@
- {% load static %}
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -32,99 +32,15 @@ A sample contact us page form written with tailwind css
 Illustration from undraw.co by the amazing Katerina Limpitsouni
 -->
 <body class="dark-mode">
-    <nav
-          class="flex items-center justify-between p-6 lg:px-8"
-          aria-label="Global"
-        >
-          <div class="flex lg:flex-1">
-            <a href="/Newscasters" class="-m-1.5 p-1.5">
-              <span class="sr-only">Groundrushlabs</span>
-              <img
-                class="h-8 w-auto bg-white"
-                src="{% static 'images\Groundrushlabs_logo.png' %}"
-                alt="groundrushlabs-logo"
-              />
-            </a>
-          </div>
-          <div class="flex lg:hidden">
-            <button
-              type="button"
-              class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700"
-            >
-              <span class="sr-only">Open main menu</span>
-              <svg
-                class="h-6 w-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
-                />
-              </svg>
-            </button>
-          </div>
-          <div class="hidden lg:flex lg:gap-x-12">
-            {% comment %} <a
-            href="/weather"
-            class="text-sm font-semibold leading-6 text-gray-900"
-            >Weather</a
-          > {% endcomment %}
-          <div class="flex items-center justify-center">
-            <span class="text-green-500 pr-2">&#8592;</span> <!-- Left arrow emoji -->
-            <a href="/Newscasters" class="text-sm font-semibold leading-6 text-black-900">Newscasters</a>
-        </div>
-        
-          
-          <a
-            href="/contactus"
-            class="text-sm font-semibold leading-6 text-gray-900"
-            >Contact us</a
-          >
-          <a
-            href="/aboutus"
-            class="text-sm font-semibold leading-6 text-gray-900"
-            >About us</a
-          >
-          <a
-            href="/chatbot"
-            class="text-sm font-semibold leading-6 text-gray-900"
-            >Chatbot</a
-          >
-            {% if user.is_authenticated %}
-            <p class="text-lg text-black-800">
-              Welcome,
-              <span class="text-blue-500 font-semibold"
-                >{{ user.username }}</span
-              >!
-            </p>
-            <a
-              href="/admin"
-              class="text-sm font-semibold leading-6 text-black-900"
-              >Admin Panel</a
-            >
-          </div>
-          <div class="hidden lg:flex lg:flex-1 lg:justify-end"></div>
-
-          <a
-            href="{% url 'rss_to_audio_app:logout' %}"
-            class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600"
-            >Logout</a
-          >
-
-          {% else %}
-          <!-- Your login form here -->
-          {% endif %}
-        </nav>
-    <div class="text-center w-full">
-      
-    </div>
+  {% include 'navbar.html' %}
+   <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    
     <div
-      class="max-w-screen-xl mt-24 px-8 grid gap-8 grid-cols-1 md:grid-cols-2 md:px-12 lg:px-16 xl:px-32 py-16 mx-auto bg-gray-100 text-gray-900 rounded-lg shadow-lg">
+      class="max-w-screen-xl mt-24 px-8 grid gap-8 grid-cols-1 md:grid-cols-2 md:px-12 lg:px-16 xl:px-32 py-16 mx-auto bg-gray-100 text-gray-900 rounded-lg shadow-lg ">
       <div class="flex flex-col justify-between">
         <div>
           <h2 class="text-4xl lg:text-5xl font-bold leading-tight">Lets talk about everything!</h2>
@@ -658,7 +574,42 @@ Illustration from undraw.co by the amazing Katerina Limpitsouni
     </form>
       </div>
     </div>
+    
   </body>
+  
+  <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <footer class="bg-gray-800 text-white text-center py-4">
+      <div class="container mx-auto">
+        <p>&copy; <span id="currentYear"></span> - GroundRushLabs</p>
+      </div>
+    </footer>
+    <script>
+      // Update the current year dynamically
+      document.getElementById('currentYear').innerText = new Date().getFullYear();
+      document.getElementById('dropdown-button').addEventListener('click', function () {
+        var menu = document.getElementById('dropdown-menu');
+        menu.classList.toggle('hidden');
+        menu.classList.toggle('block');
+    });
+  
+    document.addEventListener('click', function (event) {
+        var menu = document.getElementById('dropdown-menu');
+        var button = document.getElementById('dropdown-button');
+  
+        if (!menu.contains(event.target) && !button.contains(event.target)) {
+            menu.classList.add('hidden');
+            menu.classList.remove('block');
+        }
+    });
+  </script>
   
 </html>
 
