--- a/templates/weather_zipcode.html
+++ b/templates/weather_zipcode.html
@@ -95,26 +95,26 @@
                 {% endcomment %}
                 {% comment %} <option value="Female">Female</option> {% endcomment %}
                 {% comment %} <option value="Male">Male</option>  {% endcomment %}
-                <option value="Joanna">Joanna</option>
-                <option value="Matthew">Matthew</option>
-                <option value="Ivy">Ivy</option>
-                <option value="Justin">Justin</option>
-                <option value="Kendra">Kendra</option>
-                <option value="Kimberly">Kimberly</option>
-                <option value="Salli">Salli</option>
-                <option value="Joey">Joey</option>
-                {% comment %} <option value="Nicole">Nicole</option> {% endcomment %}
-                {% comment %} <option value="Russell">Russell</option> {% endcomment %}
-                <option value="Amy">Amy</option>
-                <option value="Brian">Brian</option>
-                <option value="Emma">Emma</option>
-                <option value="Daniella">Daniella</option>
-                <option value="Ruth">Ruth</option>
-                <option value="Gregory">Gregory</option>
-                <option value="Kevin">Kevin</option>
-                <option value="Joey">Joey</option>
-                {% comment %} <option value="Conchita">Conchita</option> {% endcomment %}
-                {% comment %} <option value="Stephan">Stephan</option> {% endcomment %}
+                <option value="21m00Tcm4TlvDq8ikWAM">Rachel</option>
+                <option value="29vD33N1CtxCmqQRPOHJ">Drew</option>
+                <option value="2EiwWnXFnvU5JabPnv8n">Clyde</option>
+                <option value="AZnzlk1XvdvUeBnXmlld">Domi</option>
+                <option value="CYw3kZ02Hs0563khs1Fj">Dave</option>
+                <option value="D38z5RcWu1voky8WS1ja">Fin</option>
+                <option value="EXAVITQu4vr4xnSDxMaL">Sarah</option>
+                <option value="ErXwobaYiN019PkySvjV">Antoni</option>
+                <option value="GBv7mTt0atIp3Br8iCZE">Thomas</option>
+                <option value="IKne3meq5aSn9XLyUdCD">Charlie</option>
+                <option value="JBFqnCBsd6RMkjVDRZzb">George</option>
+                <option value="LcfcDJNUP1GQjkzn1xUU">Emily</option>
+                <option value="MF3mGyEYCl7XYWbV9V6O">Elli</option>
+                <option value="N2lVS1w4EtoT3dr4eOWO">Callum</option>
+                <option value="ODq5zmih8GrVes37Dizd">Patrick</option>
+                <option value="SOYHLrjzK2X1ezoPC6cr">Harry</option>
+                <option value="TX3LPaxmHKxFdv7VOQHJ">Liam</option>
+                <option value="ThT5KcBeYPX3keUQqHPh">Dorothy</option>
+                <option value="TxGEqnHWrfWFTfGW9XjX">Josh</option>
+                
               </select>
             </div>
 
