--- a/templates/index.html
+++ b/templates/index.html
@@ -324,6 +324,22 @@
                     <input type="text" id="news_caster" name="news_caster" required class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black" value="{{ news_caster }}">
                 </div>
                 </div>
+                <div class="mb-4">
+                  <label
+                    for="language"
+                    class="block text-gblackray-700 font-semibold mb-2"
+                    >Language</label
+                  >
+                  <input
+                    type="text"
+                    id="language"
+                    name="language"
+                    required
+                    class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                    value="{{ language }}"
+                    
+                  />
+              </div>
                 
                 
                 <button
