--- a/templates/weather_zipcode.html
+++ b/templates/weather_zipcode.html
@@ -226,6 +226,22 @@
                 value="{{ news_caster }}"
               />
             </div>
+            <div class="mb-4">
+              <label
+                for="language"
+                class="block text-gblackray-700 font-semibold mb-2"
+                >Language</label
+              >
+              <input
+                type="text"
+                id="language"
+                name="language"
+                required
+                class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500 bg-black"
+                value="{{ language }}"
+                
+              />
+            </div>
 
             <button
               type="submit"
